force-app/main/default/objects/CLQ_Findings__c/CLQ_Findings__c.object-meta.xml
<CustomObject>
    <label>Findings</label>
    <nameField>
        <displayFormat>Findings-{000000}</displayFormat>
        <label>Findings No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Findings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>