force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Action_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Action_Required__c</fullName>
    <label>Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>TA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>