force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Alleged_Finding__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Alleged_Finding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alleged Finding</label>
    <type>Checkbox</type>
</CustomField>