force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_CAP_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP Required</label>
    <type>Checkbox</type>
</CustomField>