force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_CAP_TA__c.field-meta.xml
<CustomField>
    <fullName>CLQ_CAP_TA__c</fullName>
    <description>This field is used on Visit mode page as place holder to accommodate some functionalities. It should not be exposed to page layout</description>
    <label>CAP/TA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>TA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>