force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Compliance_Due_By__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Compliance_Due_By__c</fullName>
    <label>Compliance Due By</label>
    <type>Date</type>
</CustomField>