force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Description__c</fullName>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>