force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Documents_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Documents_Required__c</fullName>
    <label>Documents Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>