force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Finding_Description__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Description__c</fullName>
    <label>Finding Description</label>
    <type>TextArea</type>
</CustomField>