force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Finding_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Finding_Type__c</fullName>
    <formula>TEXT( CLQ_Domain_Rule_Finding__r.CLQ_Standard_Finding__r.CLQ_Finding_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finding Type</label>
    <type>Text</type>
</CustomField>