force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Integration_Document_Type__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Integration_Document_Type__c</fullName>
    <label>Integration Document Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>