force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_LRNC__c.field-meta.xml
<CustomField>
    <fullName>CLQ_LRNC__c</fullName>
    <formula>IF(CLQ_Risk_Level__c =&apos;Low&apos;, CLQ_Non_Compliance_points__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LRNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>