force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Non_Compliance_points__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Non_Compliance_points__c</fullName>
    <label>Non Compliance Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>