force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Risk_Level__c</fullName>
    <formula>TEXT(CLQ_Domain_Rule_Finding__r.CLQ_Standard_Finding__r.CLQ_Risk_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Level</label>
    <type>Text</type>
</CustomField>