force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Standard_Finding__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Standard_Finding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Standard Finding</label>
    <referenceTo>CLQ_Standard_Findings__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>