force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_StandardFindingsName__c.field-meta.xml
<CustomField>
    <fullName>CLQ_StandardFindingsName__c</fullName>
    <label>StandardFindingsName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>