force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_Stnd_Finding__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Stnd_Finding__c</fullName>
    <formula>CLQ_Domain_Rule_Finding__r.CLQ_Standard_Finding__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Finding</label>
    <type>Text</type>
</CustomField>