force-app/main/default/objects/CLQ_Findings__c/fields/CLQ_TA_Required__c.field-meta.xml
<CustomField>
    <fullName>CLQ_TA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TA Required</label>
    <type>Checkbox</type>
</CustomField>