force-app/main/default/objects/CLQ_Findings__c/fields/Points__c.field-meta.xml
<CustomField>
    <fullName>Points__c</fullName>
    <label>Points</label>
    <length>10</length>
    <type>Text</type>
</CustomField>