force-app/main/default/objects/CLQ_Findings__c/fields/Program_Transaction__c.field-meta.xml
<CustomField>
    <fullName>Program_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Transaction</label>
    <referenceTo>CLQ_Program_Transaction__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>