force-app/main/default/objects/CLQ_Findings__c/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>CLQ_Rule__c</referenceTo>
    <relationshipLabel>Findings</relationshipLabel>
    <relationshipName>Findings</relationshipName>
    <type>Lookup</type>
</CustomField>